# qt5qmesydaq

./: README.md
qt5qmesydaq/: .gitignore  AUTHORS  CMakeLists.txt  CMakeSettings.json  COPYRIGHT  Dockerfile  Doxyfile  Qt5MesyDaq.sln  QtInstallToolchainLinux.html  README  TODO  qmesydaq.desktop
qt5qmesydaq/charm/: Entangle.Logger.hpp  Mcpd8.CmdPacket.hpp  Mcpd8.DataPacket.hpp  Mcpd8.enums.hpp  Mesytec.hpp  Zweistein.Event.hpp  Zweistein.HomePath.hpp  Zweistein.Logger.hpp  Zweistein.PrettyBytes.hpp  Zweistein.ThreadPriority.hpp  Zweistein.bitreverse.hpp  coloured_console_sink.cpp  coloured_console_sink.h  simpleLogger.cpp  simpleLogger.h  stdafx.h
qt5qmesydaq/debian/: changelog  control  copyright  qmesydaq.install  rules
qt5qmesydaq/doc/: MDLL_Fragen_Anregungen.txt  TODO  api.dox  application.dox  command_reference.dox  data_format.dox  functions.dox  listmodeformat.dox  mesydaq.dox  mesytec_protocol.dox  resolution_steps_at_SPODI.txt  specification.dox  usermanual.dox
qt5qmesydaq/doc/sphinx/: Application_Considerations_.rst  Bus_protocol___Data_transmission.rst  Command_Reference.rst  Functional_descriptions_.rst  Listmode_Data_Format.rst  MDLL.rst  MDLL_Command_Reference.rst  MDLL_Databuffers.rst  Makefile  commandbuffers.rst  commandbuffertable.inc  conf.py  databuffers.rst  index.rst  make.bat  overview.rst  protocol.rst
qt5qmesydaq/interfaces/: CMakeLists.txt
qt5qmesydaq/interfaces/tango/: CMakeLists.txt  ClassFactory.cpp  TANGOLoop.cpp  TANGOLoop.h
qt5qmesydaq/interfaces/tango/counterchannel/: CounterChannel.cpp  CounterChannel.h  CounterChannel.xmi  CounterChannelClass.cpp  CounterChannelClass.h  CounterChannelStateMachine.cpp
qt5qmesydaq/interfaces/tango/detectorchannel/: DetectorChannel.cpp  DetectorChannel.h  DetectorChannel.xmi  DetectorChannelClass.cpp  DetectorChannelClass.h  DetectorChannelStateMachine.cpp
qt5qmesydaq/interfaces/tango/imagechannel/: ImageChannel.cpp  ImageChannel.h  ImageChannel.xmi  ImageChannelClass.cpp  ImageChannelClass.h  ImageChannelStateMachine.cpp
qt5qmesydaq/interfaces/tango/mlzdevice/: MLZDevice.cpp  MLZDevice.h  MLZDevice.xmi  MLZDeviceClass.cpp  MLZDeviceClass.h  MLZDeviceStateMachine.cpp
qt5qmesydaq/interfaces/tango/timerchannel/: TimerChannel.cpp  TimerChannel.h  TimerChannel.xmi  TimerChannelClass.cpp  TimerChannelClass.h  TimerChannelStateMachine.cpp
qt5qmesydaq/interfaces/tcp/: CMakeLists.txt  TCPLoop.cpp  TCPLoop.h  remoteserver.cpp  remoteserver.h
qt5qmesydaq/lib/: .gitignore  CMakeLists.txt  Doxyfile  Zweistein.TraceSteps.cpp  Zweistein.TraceSteps.h  calibration.cpp  calibration.h  counter.cpp  counter.h  datarepeater.cpp  datarepeater.h  editormemory.cpp  editormemory.h  histogram.cpp  histogram.h  libQMesyDAQ.vcproj  libqmesydaq.vcxproj  libqmesydaq.vcxproj.filters  libqmesydaq_global.h  linearmapcorrect.cpp  m2d.cpp  m2dfactory.cpp  mapcorrect.cpp  mapcorrect.h  mappeddetector.cpp  mappeddetector.h  mappedhistogram.cpp  mappedhistogram.h  mcpd.cpp  mcpd.h  mcpd2.cpp  mcpd2.h  mcpd8.cpp  mcpd8.h  mdefines.h  mdll.cpp  mdll.h  mdllcorrect.cpp  mdllcorrect.h  measurement.cpp  (+26 more)
qt5qmesydaq/lib/GeneratedFiles/Release/: moc_counter.cpp  moc_datarepeater.cpp  moc_histogram.cpp  moc_mapcorrect.cpp  moc_mappedhistogram.cpp  moc_mcpd.cpp  moc_mcpd2.cpp  moc_mcpd8.cpp  moc_mdll.cpp  moc_measurement.cpp  moc_mesydaq2.cpp  moc_mpsd8.cpp  moc_mstd16.cpp  moc_networkdevice.cpp  moc_spectrum.cpp  moc_streamwriter.cpp
qt5qmesydaq/qled/: INSTALL  README  plugin.sln  qled.sln
qt5qmesydaq/qled/example/: dialog.cpp  dialog.ui  example.pro  example.vcxproj  main.cpp
qt5qmesydaq/qled/plugin/: plugin.pro  plugin.vcxproj  plugin.vcxproj.filters  qledplugin.cpp  qledplugin.h
qt5qmesydaq/qled/src/: CMakeLists.txt  qled.cpp  qled.h  qled.qrc  src.pro
qt5qmesydaq/qmesydaq/: .gitignore  CMakeLists.txt  ChannelSpinBox.cpp  ChannelSpinBox.h  CommandEvent.cpp  CommandEvent.h  ConfigFileDialog.cpp  ConfigFileDialog.h  Doxyfile  LoopObject.cpp  LoopObject.h  MCPDSpinBox.cpp  MCPDSpinBox.h  ModuleSpinBox.cpp  ModuleSpinBox.h  MultipleLoopApplication.cpp  MultipleLoopApplication.h  QMesyDAQ.vcproj  QMesydaqDetectorInterface.cpp  QMesydaqDetectorInterface.h  QtInterface.cpp  QtInterface.h  StatusBarEntry.cpp  StatusBarEntry.h  StatusBarEntry.ui  Zweistein.Console.cpp  Zweistein.Console.h  Zweistein.LoopObject.cpp  Zweistein.LoopObject.h  Zweistein.TraceApp.h  additionaleventconfig.ui  caresssetup.cpp  caresssetup.h  caresssetup.ui  channelhistogramsetup.ui  colormaps.cpp  colormaps.h  colorwidget.cpp  colorwidget.h  data.cpp  (+78 more)
qt5qmesydaq/qmesydaq/nucleo_rate_testing/: Nucleo0SetRate.py  daqstop.py  mesylib.py
qt5qmesydaq/qmesydaq/setupwidget/: setupwidget.pro
qt5qmesydaq/qmesydaq/setupwidget/GraphicsSceneWidget/: GraphicsSceneWidget.pro  button.cpp  button.h  dialog.cpp  dialog.h  dialogbase.cpp  dialogbase.h  graphicsscene.cpp  graphicsscene.h  inputdialog.cpp  inputdialog.h  item.cpp  item.h  itemaction.cpp  itemaction.h  line.cpp  line.h  main.cpp  templine.cpp  templine.h
qt5qmesydaq/qmesydaq/setupwidget/SetupWidget/: SetupWidget.pro  addtreedialog.cpp  addtreedialog.h  canvas.cpp  canvas.h  channel.cpp  channel.h  channelinputdialog.cpp  channelinputdialog.h  inputdialogmcpd_8.cpp  inputdialogmcpd_8.h  main.cpp  pc.h  (+15 more)
qt5qmesydaq/qwt5-qt5/: CMakeLists.txt  qwt5-qt5.sln
qt5qmesydaq/qwt5-qt5/src/: CMakeLists.txt  qwt5-qt.vcxproj  qwt5-qt5_resource.rc  qwt_abstract_scale_draw.cpp  qwt_abstract_slider.cpp  qwt_abstract_slider.h  qwt_analog_clock.cpp  qwt_arrow_button.cpp  qwt_arrow_button.h  qwt_clipper.cpp  qwt_color_map.h  qwt_compass.cpp  qwt_compass_rose.cpp  qwt_compass_rose.h  qwt_counter.cpp  qwt_counter.h  qwt_curve_fitter.cpp  qwt_curve_fitter.h  qwt_data.cpp  qwt_data.h  qwt_dial.cpp  qwt_dial.h  qwt_dial_needle.cpp  qwt_dial_needle.h  qwt_dyngrid_layout.cpp  qwt_dyngrid_layout.h  qwt_event_pattern.cpp  qwt_global.h  qwt_knob.cpp  qwt_knob.h  qwt_layout_metrics.cpp  qwt_legend.cpp  qwt_legend.h  qwt_legend_item.cpp  qwt_magnifier.cpp  qwt_painter.cpp  qwt_painter.h  qwt_panner.cpp  qwt_panner.h  qwt_picker.cpp  (+48 more)
(+2 files in other folders)
